--- a/config/database.yml
+++ b/config/database.yml
@@ -4,6 +4,7 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
+host: /tmp
 default: &default
   adapter: postgresql
   pool: 5
